Fix opaque backdrop in dark mode (#12765)

--- a/clients/apps/web/src/styles/globals.css
+++ b/clients/apps/web/src/styles/globals.css
@@ -262,6 +262,10 @@
     @apply text-gray-200;
   }
 
+  #polar-embed-layout {
+    color-scheme: normal;
+  }
+
   html:not(.dark) {
     --lightningcss-light: initial;
     --lightningcss-dark: ;
